--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,45 @@
 version: 2.1
 
+commands:
+  destroy-environment:
+      description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
+      steps:
+        - run:
+            name: Destroy environments
+            when: on_fail
+            command: |
+              aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+              aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
+              aws s3 rb s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --force
+  revert-migrations:
+    description: Revert the last migration if successfully run in the current workflow.
+    steps:
+      - run:
+          name: Revert migrations
+          when: on_fail
+          command: |
+            cd ~/project/backend
+            npm install
+            npm run build
+            npm run migrations:revert
+
+docker_image1: &node_image
+  docker:
+      - image: circleci/node:13.8.0
+docker_image3: &aws_image
+  docker:
+      - image: amazon/aws-cli
+docker_image4: &ansible_image
+  docker:
+      - image: python:3.7-alpine3.16
+
+
+
+
 
 jobs:
   build-frontend:
-    docker:
-      - image: circleci/node:13.8.0
+    <<: *node_image
     steps:
       - checkout
       - restore_cache:
@@ -19,9 +54,10 @@ jobs:
           paths: [frontend/node_modules]
           key: frontend-build
 
+  
+
   build-backend:
-    docker:
-      - image: circleci/node:13.8.0
+    <<: *node_image
     steps:
       - checkout
       - restore_cache:
@@ -35,6 +71,35 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
+
+
+  test-frontend:
+    <<: *node_image
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Run frontend test
+          command: |
+            cd frontend
+            npm install
+            npm run build
+
+  test-backend:
+    <<: *node_image
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Run Backend test
+          command: |
+            cd backend
+            npm install
+            npm run build
+
+ 
 
 workflows:
   default:
