--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,6 +215,71 @@ jobs:
       - destroy-environment
       - revert-migrations
 
+  run-migrations:
+    <<: *node_image
+    steps:
+      - checkout 
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt install -y tar gzip curl
+            url "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip -qq awscliv2.zip
+            sudo ./aws/install
+
+      - restore_cache:
+            keys: [backend-build]
+      - run:
+            name: Run migrations
+            command: |
+              cd backend/src
+              npm run migrations >> migrations.txt
+              cat migrations.txt
+      - run:
+            name: Send migration results to kvdb
+            command: |
+                if grep -q "SELECT" ~/project/backend/src/migrations.txt
+                then
+                    # If you are using kvdb.io, generate the bucket ID "${KVDB_BUCKET}" in your local terminal first
+                    curl --insecure https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d 'success'
+                fi
+      - destroy-environment
+      - revert-migrations
+
+  deploy-frontend:
+    <<: *ansible_image
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - attach_workspace:
+          at: ~/
+      - run:
+            name: Install Dependencies
+            command: |
+              apk add --update --no-cache tar gzip nodejs npm aws-cli curl
+      - run:
+          name: Get backend url
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
+              --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            npm install
+            npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      - destroy-environment
+      - revert-migrations
+
       
 workflows:
   default:
@@ -229,5 +294,13 @@ workflows:
           requires: [build-frontend]
       - scan-backend:
           requires: [build-backend]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
+      - deploy-frontend:
+          requires: [run-migrations]
       
             
