--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -20,7 +20,7 @@
     - name: "install python for Ansible."
       become: true
       raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-      changed_when: fals
+      changed_when: false
 
   environment:
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
@@ -36,3 +36,5 @@
   roles:
     - configure-server
     - configure-prometheus-node-exporter
+
+    
