--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,83 @@
 version: 2.1
 
 orbs:
-  slack: circleci/slack@4.12.5
+  aws-cli: circleci/aws-cli@1.3.2
+
 
 commands:
   destroy-environment:
-      description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
-      steps:
-        - run:
-            name: Destroy environments
-            when: on_fail
-            command: |
-              aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
-              aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
-              aws s3 rb s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --force
+    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
+    parameters:
+      # Add parameter here
+      ID:
+        description: The ID used to create bucket and stacks
+        type: string
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
+    steps:
+      - run:
+          name: Destroy environments
+          when: on_fail
+          command: |
+            # Your code here
+            export TERM=ansi #Fixed: WARNING: terminal is not fully functional
+            # Delete objects in S3 bucket
+            aws s3 rm "s3://udapeople-<<parameters.ID>>" --recursive
+            # Delete frontend stack
+            aws cloudformation delete-stack --stack-name \
+              "stack-frontend-<<parameters.ID>>"  
+            # Delete backend stack
+            aws cloudformation delete-stack --stack-name \
+              "stack-backend-<<parameters.ID>>" 
+          
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
+    parameters:
+      # Add parameter here
+      ID:
+        description: The ID used to create bucket and stacks
+        type: string
+        default: ${CIRCLE_WORKFLOW_ID}  
     steps:
       - run:
           name: Revert migrations
+          # Add when this will run
           when: on_fail
           command: |
-            cd ~/project/backend
-            npm install
-            npm run build
-            npm run migrations:revert
+            # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
+            SUCCESS=$(curl -H "token: 271ce878-7b96-47f1-ae12-e706830ca519" \
+              --request GET https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID})
+            echo "---SUCCESS---"
+            echo "${SUCCESS}"
+            echo "---SUCCESS---"
+            if(( ${SUCCESS}==1 )); 
+            then
+              cd ~/project/backend
+              npm install
+              #  Add revert code here. You can find this in the Getting Started section.
+              echo "Reverting migrations..."
+              npm run-script migrations:revert
+            else
+              echo "No migrations to revert!"  
+            fi
 
-docker_image1: &node_image
-  docker:
-      - image: circleci/node:13.8.0
-docker_image3: &aws_image
-  docker:
-      - image: amazon/aws-cli
-docker_image4: &ansible_image
-  docker:
-      - image: python:3.7-alpine3.16
+  setup-backend-environment-variables:
+    description: Setup environment variables in "backend/.env" file
+    steps:
+      - run:
+          name: Add env variables to "backend/.env" file
+          working_directory: backend
+          command: |
+            echo "ENVIRONMENT=production" >> .env
+            echo "NODE_ENV=production" >> .env
+            echo "TYPEORM_CONNECTION=postgres" >> .env
+            echo "TYPEORM_MIGRATIONS_DIR=./src/migrations" >> .env
+            echo "TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts" >> .env
+            echo "TYPEORM_MIGRATIONS=./src/migrations/*.ts" >> .env
+            echo "TYPEORM_HOST=$TYPEORM_HOST" >> .env
+            echo "TYPEORM_PORT=$TYPEORM_PORT" >> .env
+            echo "TYPEORM_USERNAME=$TYPEORM_USERNAME" >> .env
+            echo "TYPEORM_PASSWORD=$TYPEORM_PASSWORD" >> .env
+            echo "TYPEORM_DATABASE=$TYPEORM_DATABASE" >> .env
 
 
 
@@ -42,273 +85,41 @@ docker_image4: &ansible_image
 
 jobs:
   build-frontend:
-    <<: *node_image
+    docker:
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
-          keys: [frontend-build]
+          keys: [frontend-build--v1]
       - run:
           name: Build front-end
+          working_directory: frontend
           command: |
-            cd frontend
+            # Your code here
             npm install
-            npm run build
+            npm run-script build
       - save_cache:
           paths: [frontend/node_modules]
-          key: frontend-build
-
-  
+          key: frontend-build--v1
 
   build-backend:
-    <<: *node_image
+    docker:
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
-          keys: [backend-build]
+          keys: [backend-build--v1]
       - run:
           name: Back-end build
+          working_directory: backend
           command: |
-            cd frontend
-            npm install
-            npm run build
+            # Your code here
+             npm install
+             npm run-script build
       - save_cache:
           paths: [backend/node_modules]
-          key: backend-build
+          key: backend-build--v1
 
-
-  test-frontend:
-    <<: *node_image
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [frontend-build]
-      - run:
-          name: Run frontend test
-          command: |
-            cd frontend
-            npm install
-            npm run build
-
-  test-backend:
-    <<: *node_image
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [backend-build]
-      - run:
-          name: Run Backend test
-          command: |
-            cd backend
-            npm install
-            npm run build
-
-  scan-frontend:
-    <<: *node_image
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [frontend-build]
-      - run:
-          name: Run frontend scan
-          command: |
-            cd frontend
-            npm install
-            npm audit fix --audit-level=critical --force
-            npm update js-yaml --depth 4
-
-  scan-backend:
-    <<: *node_image
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [backend-build]
-      - run:
-          name: Run Backend scan
-          command: |
-            cd backend
-            npm install
-            npm audit fix --audit-level=critical --force
-            npm audit fix
-            npm update path-parse --depth 3
-
-  deploy-infrastructure:
-    <<: *aws_image
-    steps:
-      - checkout
-      - run:
-          name: Ensure that the back-end infrastructure exists
-          command: |
-            aws cloudformation deploy \
-              --template-file .circleci/files/backend.yml \
-              --tags project=udapeople \
-              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
-              exit_code=$?
-              if [[ $exit_code == 0  ||  $exit_code == 255 ]]; 
-                then
-                    exit 0
-                else
-                    exit 1
-                fi
-      - run:
-          name: Ensure that the front-end infrastructure exist
-          command: |
-            aws cloudformation deploy \
-              --template-file .circleci/files/frontend.yml \
-              --tags project=udapeople \
-              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
-              exit_code=$?
-              if [[ $exit_code == 0  ||  $exit_code == 255 ]]; 
-                then
-                    exit 0
-                else
-                    exit 1
-                fi
-      - run:
-          name: install tar & gzip utility
-          command: yum install -y tar gzip
-      - run:
-          name: Add back-end ip to ansible inventory
-          command: |
-            cd .circleci/ansible
-            aws ec2 describe-instances \
-            --filters Name=tag:Name,Values="backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-            --query  'Reservations[*].Instances[*].PublicIpAddress' \
-            --output text >> ~/project/.circleci/ansible/inventory.txt
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project/.circleci/ansible/inventory.txt
-      - destroy-environment
-      - revert-migrations
-  
-  configure-infrastructure:
-    <<: *ansible_image
-    steps:
-      - checkout 
-      - add_ssh_keys:
-          fingerprints: ["74:bd:76:49:ec:ae:5e:44:75:cd:61:4c:a5:eb:49:9c"]
-      - attach workspace:
-          at: ~/
-      - run:
-          name: Install dependencies
-          command: |
-            apk add ansible gzip openssh-client
-            
-      - run:
-          name: Configure server
-          command: |
-           echo ENVIRONMENT=production > backend/.env
-           echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> backend/.env
-           echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> backend/.env
-           echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> backend/.env
-           echo TYPEORM_HOST=$TYPEORM_HOST >> backend/.env
-           echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> backend/.env
-           echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> backend/.env
-           echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> backend/.env
-           echo TYPEORM_PORT=$TYPEORM_PORT >> backend/.env
-           echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> backend/.env
-           cat backend/.env
-           cd .circleci/ansible
-           ansible-playbook -i inventory.txt configure-server.yml
-      - destroy-environment
-      - revert-migrations
-
-  run-migrations:
-    <<: *node_image
-    steps:
-      - checkout 
-      - run:
-          name: Install dependencies
-          command: |
-            sudo apt install -y tar gzip curl
-            url "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip -qq awscliv2.zip
-            sudo ./aws/install
-
-      - restore_cache:
-            keys: [backend-build]
-      - run:
-            name: Run migrations
-            command: |
-              cd backend/src
-              npm run migrations >> migrations.txt
-              cat migrations.txt
-      - run:
-            name: Send migration results to kvdb
-            command: |
-                if grep -q "SELECT" ~/project/backend/src/migrations.txt
-                then
-                    # If you are using kvdb.io, generate the bucket ID "${KVDB_BUCKET}" in your local terminal first
-                    curl --insecure https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d 'success'
-                fi
-      - destroy-environment
-      - revert-migrations
-
-  deploy-frontend:
-    <<: *ansible_image
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [frontend-build]
-      - attach_workspace:
-          at: ~/
-      - run:
-            name: Install Dependencies
-            command: |
-              apk add --update --no-cache tar gzip nodejs npm aws-cli curl
-      - run:
-          name: Get backend url
-          command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-              --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "API_URL = ${API_URL}"
-            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
-            cat frontend/.env
-      - run:
-          name: Deploy frontend objects
-          command: |
-            cd frontend
-            npm install
-            npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy-environment
-      - revert-migrations
-
-      
-  deploy-backend:
-    <<: *ansible_image
-    steps:
-      - checkout
-      - add_ssh_keys:
-            fingerprints: ["74:bd:76:49:ec:ae:5e:44:75:cd:61:4c:a5:eb:49:9c"]
-      - attach_workspace:
-          at: ~/
-      - restore_cache:
-          keys: [backend-deps]
-      - run:
-            name: Install Dependencies
-            command: |
-              apk add --update --no-cache tar gzip nodejs npm aws-cli curl ansible
-      - run:
-          name: Deploy backend
-          command: |
-            cd backend
-            npm install
-            npm run build
-            cd ..
-            tar -C backend -czvf artifact.tar.gz .
-            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
-            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
-            cd .circleci/ansible
-            ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment
-      - revert-migrations
 
       
 workflows:
@@ -316,21 +127,6 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - scan-backend:
-          requires: [build-backend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
+     
       
             
