--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -176,7 +176,8 @@ jobs:
           working_directory: frontend
           command: |
             npm install
-            npm audit --audit-level=critical
+            npm audit fix --audit-level=critical --force
+
 
   scan-backend:
     docker:
@@ -194,7 +195,8 @@ jobs:
           working_directory: backend
           command: |
             npm install
-            npm audit --audit-level=critical
+            npm audit fix --audit-level=critical --force
+
 
 
       
