--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -197,6 +197,60 @@ jobs:
             npm install
             npm audit fix --audit-level=critical --force
 
+  deploy-infrastructure:
+    docker:
+      # Docker image here that supports AWS CLI
+      - image: amazon/aws-cli
+    steps:
+      - run:
+          command: |
+            curl -sL https://rpm.nodesource.com/setup_14.x | bash -            
+            yum -y install tar gzip git nodejs
+            # amazon-linux-extras install ansible2 -y
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Ensure back-end infrastructure exists
+          working_directory: .circleci/files
+          command: |
+            echo "Deploying backend..."
+            aws cloudformation deploy \
+              --template-file backend.yml \
+              --stack-name "stack-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
+              --tags "project=udapeople" "workflow_id=${CIRCLE_WORKFLOW_ID:0:7}"
+      - run:
+          name: Ensure front-end infrastructure exist
+          working_directory: .circleci/files
+          command: |
+            echo "Deploying frontend..."
+             aws cloudformation deploy \
+               --template-file frontend.yml \
+               --stack-name "stack-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
+               --tags "project=udapeople"
+      - run:
+          name: Add back-end ip to ansible inventory
+          working_directory: .circleci/ansible 
+          command: |
+            # Your code here
+            echo "[web]" > inventory.txt
+            aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:workflow_id,Values=${CIRCLE_WORKFLOW_ID:0:7}" \
+              --output text >> inventory.txt
+            echo "---inventory.txt---"
+            cat inventory.txt
+            echo "---inventory.txt---"
+
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/.circleci/ansible/inventory.txt
+      # Here's where you will add some code to rollback on failure
+      - destroy-environment
+      - revert-migrations 
+
 
 
       
@@ -213,8 +267,14 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]               
+          filters:
+            branches:
+              # only: [circleci-project-setup]
+              only: [master]
 
       
      
       
-            
+
