--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -251,8 +251,157 @@ jobs:
       - destroy-environment
       - revert-migrations 
 
+  configure-infrastructure:
+    docker:
+      # Docker image here that supports Ansible
+      # - image: python:3.9.1-alpine3.12
+      - image: circleci/node:13.8.0
+    steps:
+      - aws-cli/setup
+      # Checkout code from git
+      - checkout
+      # Add ssh keys with fingerprint
+      - add_ssh_keys:
+          fingerprints: ["9b:01:f0:ad:d7:c6:41:10:20:9c:79:24:de:89:25:13"] 
+      # attach workspace
+      - attach_workspace:
+          at: ~/      
+      - run:
+          name: Install dependencies
+          command: |
+            # Your code here
+            sudo apt -yq install python3 ansible   
+      - setup-backend-environment-variables
+      - run:
+          name: Configure server
+          working_directory: .circleci/ansible 
+          command: |
+            # Your code here
+            ansible-playbook -i inventory.txt configure-server.yml
+      # Here's where you will add some code to rollback on failure
+      - destroy-environment
+      - revert-migrations 
 
+  run-migrations:
+    docker:
+      # Docker image here that supports NodeJS
+      - image: circleci/node:13.8.0
+    steps:
+      - aws-cli/setup
+      # Checkout code from git
+      - checkout
+      - restore_cache:
+          keys: [backend-build--v1]  
+      - run:
+          name: Run migrations
+          working_directory: backend 
+          command: |
+            # Your code here
+            npm install
+            npm run migrations > migrations.log
+            cat migrations.log
+      - run:
+          name: Send migration results to memstash
+          working_directory: backend 
+          command: |
+            # Your code here
+            RESULT=$(! grep -q "has been executed successfully" migrations.log; echo $?)
+            echo "RESULT=$RESULT"
+            curl -H "Content-Type: text/plain" -H "token: 271ce878-7b96-47f1-ae12-e706830ca519" \
+              --request PUT \
+              --data "$RESULT" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID}
+            echo "---CIRCLE_WORKFLOW_ID---"  
+            echo "${CIRCLE_WORKFLOW_ID}"
+            echo "---CIRCLE_WORKFLOW_ID---"  
+     # Here's where you will add some code to rollback on failure
+      - destroy-environment
+      - revert-migrations  
 
+  deploy-frontend:
+    docker:
+      # Docker image here that supports AWS CLI
+      - image: circleci/node:13.8.0
+    steps:
+      - aws-cli/setup
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+            echo "All dependencies already installed!"
+      - attach_workspace:
+          # Here we have inventory.txt
+          at: ~/
+      - run:
+          name: Get backend url
+          command: |
+            # your code here
+            BACKEND_IP=$(grep -v "web" .circleci/ansible/inventory.txt)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
+            echo "---API_URL---"
+            cat frontend/.env
+            echo "---API_URL---"
+      - restore_cache:
+          keys: [frontend-build--v1]
+      - run:
+          name: Build frontend one last time
+          working_directory: frontend 
+          command: |
+            npm install
+            npm run build
+      - run:
+          name: Deploy frontend objects
+          working_directory: frontend
+          command: |
+            # your code here
+            aws s3 sync dist s3://udapeople-"${CIRCLE_WORKFLOW_ID:0:7}" --delete
+      # Here's where you will add some code to rollback on failure
+      - destroy-environment
+      - revert-migrations 
+
+  deploy-backend:
+    docker:
+      # Docker image here that supports Ansible
+      - image: circleci/node:13.8.0
+    steps:
+      - aws-cli/setup
+      # Checkout code from git
+      - checkout
+      # Add ssh keys with fingerprint
+      - add_ssh_keys:
+          fingerprints: ["9b:01:f0:ad:d7:c6:41:10:20:9c:79:24:de:89:25:13"]       
+      # attach workspace
+      - attach_workspace:
+          at: ~/         
+      - run:
+          name: Install dependencies
+          command: |
+            # your code here
+            sudo apt -yq install python3 ansible
+      - restore_cache:
+          keys: [backend-build--v1]
+      - setup-backend-environment-variables      
+      - run:
+          name: Get a fresh backend build
+          working_directory: backend
+          command: |
+            # Your code here
+            npm install
+            npm run-script build                 
+      - run:
+          name: Deploy backend
+          command: |
+            # your code here
+            tar -C backend -czf \
+              .circleci/ansible/roles/deploy/files/backend-artifact.tar.gz .
+            export ANSIBLE_HOST_KEY_CHECKING=False  
+            ansible-playbook -i .circleci/ansible/inventory.txt \
+              .circleci/ansible/deploy-backend.yml  
+      # Here's where you will add some code to rollback on failure
+      - destroy-environment
+      - revert-migrations
       
 workflows:
   default:
@@ -273,6 +422,12 @@ workflows:
             branches:
               # only: [circleci-project-setup]
               only: [master]
+      - run-migrations:
+          requires: [configure-infrastructure]
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
 
       
      
