--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -501,6 +501,38 @@ jobs:
       # Here's where you will add some code to rollback on failure
       - destroy-environment
       - revert-migrations
+
+  cleanup:
+      docker:
+        # Docker image here
+        - image: amazon/aws-cli
+      steps:
+        - run:
+            name: Install dependencies
+            command: |
+              yum -y install tar gzip git      
+        # Checkout code from git
+        - checkout
+        - attach_workspace:
+            # Here we have saved old_workflow_id.txt
+            at: ~/      
+      
+        - run:
+            name: Remove old stacks and files
+            command: |
+              export OldWorkflowID=$(cat ~/old_workflow_id.txt)
+              echo "---OldWorkflowID---"
+              echo "$OldWorkflowID"
+              echo "---OldWorkflowID---"
+              export TERM=ansi #Fixed: WARNING: terminal is not fully functional
+              # Delete objects in OLD S3 bucket
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              # Delete OLD frontend stack
+              aws cloudformation delete-stack --stack-name \
+                "stack-frontend-${OldWorkflowID}"  
+              # Delete OLD backend stack
+              aws cloudformation delete-stack --stack-name \
+                "stack-backend-${OldWorkflowID}" 
       
 workflows:
   default:
@@ -533,6 +565,8 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
 
       
      
