--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -549,10 +549,10 @@ workflows:
           requires: [build-frontend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]               
-          filters:
-            branches:
+          # filters:
+          #   branches:
               # only: [circleci-project-setup]
-              only: [development]
+              # only: [development]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
