--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -3,23 +3,14 @@
 - name: "configuration play." 
   hosts: web
   user: ubuntu 
+  become: true
+  become_method: sudo
+  become_user: root 
   gather_facts: false
   vars:
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
-
-  environment:
-    ENVIRONMENT:            "{{ lookup('env', 'ENVIRONMENT') }}"
-    TYPEORM_CONNECTION:     "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
-    TYPEORM_ENTITIES:       "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
-    TYPEORM_HOST:           "{{ lookup('env', 'TYPEORM_HOST') }}"
-    TYPEORM_PORT:           "{{ lookup('env', 'TYPEORM_PORT') }}"
-    TYPEORM_USERNAME:       "{{ lookup('env', 'TYPEORM_USERNAME') }}"
-    TYPEORM_PASSWORD:       "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-    TYPEORM_DATABASE:       "{{ lookup('env', 'TYPEORM_DATABASE') }}"
-    TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR') }}"
-    TYPEORM_MIGRATIONS:     "{{ lookup('env', 'TYPEORM_MIGRATIONS') }}"
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
@@ -28,11 +19,22 @@
 
     - name: "install python for Ansible."
       become: true
-      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-      changed_when: false
+      apt:
+        name: python3
+        state: latest
 
+  environment:
+    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
+    - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
+    - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
+    - TYPEORM_PORT: 5432
+    - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
+    - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
+    - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
+    - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
+    - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
 
-
+  
   roles:
     - configure-server
     - configure-prometheus-node-exporter
