--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -298,7 +298,7 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
-      - image: cimg/python:3.10
+      - image: circleci/node:14.18.1
     steps:
       # Checkout code from git
       - checkout
