--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -466,7 +466,7 @@ jobs:
             echo ${FRONTEND_URL}
             if curl -s $FRONTEND_URL | grep "Welcome"
             then
-              echo "Frontend: up and running!!!"
+              echo "Frontend: up and running!!"
               return 1
             else
               echo "Frontend: smoke test failed..."
