--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -18,16 +18,17 @@
       wait_for_connection:
         timeout: 600
 
-    - name: 'install python for Ansible.'
-      become: true
-      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-      changed_when: false
+    - name: "install python for Ansible."
+      become: yes
+      apt:
+        name: python3
+        state: latest
 
   environment:
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
     - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
     - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
-    - TYPEORM_PORT: 5432
+    - TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
     - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
     - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
     - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
@@ -38,7 +39,6 @@
   
   roles:
     - configure-server
-    - configure-prometheus-node-exporter
 
 
 
